--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ybt1.0",
+  "name": "template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,22 +8,17 @@
     "babel-plugin-import": "^1.12.0",
     "css-loader": "^2.1.1",
     "customize-cra": "^0.2.13",
-    "gg-editor": "^2.0.4",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "moment": "^2.24.0",
-    "rc-color-picker": "^1.2.6",
     "react": "^16.8.6",
     "react-app-rewire-less-modules": "^1.3.0",
-    "react-dnd": "7.4.5",
-    "react-dnd-html5-backend": "7.4.4",
     "react-dom": "^16.8.6",
-    "react-grid-layout": "^0.16.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "react-app-rewired start  --host 0.0.0.0",
+    "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test"
   },
@@ -44,6 +39,5 @@
   },
   "devDependencies": {
     "react-app-rewired": "^2.1.3"
-  },
-  "proxy": "http://10.175.205.18:8181"
+  }
 }
