--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "customize-cra": "^0.2.13",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-app-rewire-less-modules": "^1.3.0",
     "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.8.6",
+    "react-dragula": "^1.1.17",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-sortablejs": "^1.5.1",
+    "sortablejs": "^1.6.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
