--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-import": "^1.12.0",
     "css-loader": "^2.1.1",
     "customize-cra": "^0.2.13",
+    "immutability-helper": "^3.0.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
