--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-app-rewire-less-modules": "^1.3.0",
-    "react-beautiful-dnd": "^11.0.5",
+    "react-beautiful-dnd": "8.0.5",
     "react-dom": "^16.8.6",
     "react-dragula": "^1.1.17",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-sortablejs": "^1.5.1",
-    "sortablejs": "^1.6.1"
+    "sortablejs": "^1.6.1",
+    "styled-components": "3.4.9",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
