--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babel-plugin-import": "^1.12.0",
     "css-loader": "^2.1.1",
     "customize-cra": "^0.2.13",
-    "immutability-helper": "^3.0.1",
+    "immutability-helper": "3.0.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
@@ -16,6 +16,8 @@
     "react": "^16.8.6",
     "react-app-rewire-less-modules": "^1.3.0",
     "react-beautiful-dnd": "8.0.5",
+    "react-dnd": "^9.4.0",
+    "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.8.6",
     "react-dragula": "^1.1.17",
     "react-router-dom": "^5.0.0",
