--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "babel-plugin-import": "^1.12.0",
     "css-loader": "^2.1.1",
     "customize-cra": "^0.2.13",
+    "immutability-helper": "^3.0.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-app-rewire-less-modules": "^1.3.0",
     "react-beautiful-dnd": "^11.0.5",
-    "react-dom": "^16.8.6",
+    "react-dnd-html5-backend": "^9.4.0",
+    "react-dom": "^16.11.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
@@ -22,7 +24,7 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "g":"node generate.js"
+    "g": "node generate.js"
   },
   "eslintConfig": {
     "extends": "react-app"
