--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.8.6",
     "react-app-rewire-less-modules": "^1.3.0",
     "react-beautiful-dnd": "^11.0.5",
+    "react-dnd": "^9.4.0",
     "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.0.0",
