--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-smooth-dnd": "^0.11.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "g":"node generate.js"
+    "g": "node generate.js"
   },
   "eslintConfig": {
     "extends": "react-app"
