--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "bizcharts": "^3.4.3",
     "gg-editor": "^2.0.4",
+    "js-export-excel": "^1.1.2",
     "react": "^16.7.0",
     "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.7.0"
