--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "antd": "^3.26.4",
     "axios": "^0.19.0",
+    "delay": "^4.3.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-spring": "^8.0.27"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
