--- a/routeconfig.json
+++ b/routeconfig.json
@@ -1,12 +1,22 @@
 [
-  {
-    "path": "/",
-    "component": "../layouts/BasicLayout",
-    "routes": [
-      {
-        "path": "/",
-        "component": "../pages/index"
-      }
-    ]
-  }
+	{
+		"path": "/login",
+		"component": "../layouts/BlankLayout",
+		"routes": [
+			{
+				"path": "/login",
+				"component": "../pages/Login"
+			}
+		]
+	},
+	{
+		"path": "/",
+		"component": "../layouts/BasicLayout",
+		"routes": [
+			{
+				"path": "/",
+				"component": "../pages/index"
+			}
+		]
+	}
 ]
