--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^3.26.4",
     "axios": "^0.19.0",
     "delay": "^4.3.0",
+    "echarts": "^4.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-spring": "^8.0.27"
