--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "echarts": "^4.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "three": "^0.111.0",
+    "whs": "^2.1.9"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
