--- a/routeconfig.json
+++ b/routeconfig.json
@@ -18,16 +18,8 @@
 				"component": "../pages/index"
 			},
 			{
-				"path": "/home",
-				"component": "../pages/Home"
-			},
-			{
-				"path": "/lanmu",
-				"component": "../pages/Lanmu"
-			},
-			{
-				"path": "/neirong",
-				"component": "../pages/Neirong"
+				"path": "/demo",
+				"component": "../pages/Demo"
 			}
 		],
 		"Routes": ["./src/routes/Auth.js"]
