--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test"
+    "test": "react-app-rewired test",
+    "mock": "node ./server/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "json-server": "^0.16.0",
     "react-app-rewired": "^2.1.3",
     "webpackbar": "^4.0.0"
   }
